--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
     <header>
-        <span>&#9776</span>
-        <p>&#9776</p>
+        <!-- <span>&#9776</span> -->
+        
     </header>
+
+    <main>
+     <section>
+        <h1 class="text-2xl font-bold ">ami tumai valobashi ay jebon er chaye beshi jebon galew bulte parbo na </h1>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsa itaque repellat facilis quam sit nulla? Nisi fuga ullam labore impedit exercitationem repellat quidem, ipsum nobis praesentium recusandae voluptatem voluptatibus.</p>
+     </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
+ 
