add a section and telwill

--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
 
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsa itaque repellat facilis quam sit nulla? Nisi fuga ullam labore impedit exercitationem repellat quidem, ipsum nobis praesentium recusandae voluptatem voluptatibus.</p>
      </section>
+
+     <section>
+        <h1 class="text-5xl">this is a large text </h1>
+        <h3 class="text-3xl font-bold ">this is a medium text</h3>
+        <p>normal text</p>
+        <p class="text-blue-500 font-bold">blue text</p>
+
+        <p class="text-right">right text</p>
+        <p class="text-center bg-orange-400">leift text</p>
+        <div class="h-14 bg-gradient-to-r from-yellow-500 to-orange-500"></div>
+        <div class="border border-amber-500">
+            <h3>title</h3>
+            <p>content</p>
+        </div>
+     </section>
+
+
+
+     <section class="m-4  h-64 border-orange-600 border-8 overflow-scroll border">
+    <h3>about us</h3>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis esse quidem maiores modi, ipsa tempora impedit nesciunt blanditiis assumenda dolores perspiciatis facilis, ea aut fugit porro voluptas, aperiam cupiditate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis possimus illo mollitia aliquid at doloribus, nobis quidem molestiae eligendi maiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quis dolor rem reiciendis adipisci fugit eveniet quas quos esse perspiciatis molestias sunt earum, corrupti molestiae labore hic, deserunt ducimus vitae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolorum odit molestiae, vero esse debitis tenetur nisi natus rerum obcaecati eaque maxime beatae! Vitae eaque voluptate qui, a doloribus fugit?</p>
+
+     </section>
     </main>
 
     <footer>
