add a other section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,51 @@
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis esse quidem maiores modi, ipsa tempora impedit nesciunt blanditiis assumenda dolores perspiciatis facilis, ea aut fugit porro voluptas, aperiam cupiditate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis possimus illo mollitia aliquid at doloribus, nobis quidem molestiae eligendi maiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quis dolor rem reiciendis adipisci fugit eveniet quas quos esse perspiciatis molestias sunt earum, corrupti molestiae labore hic, deserunt ducimus vitae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolorum odit molestiae, vero esse debitis tenetur nisi natus rerum obcaecati eaque maxime beatae! Vitae eaque voluptate qui, a doloribus fugit?</p>
 
      </section>
+
+     <hr>
+     <section class="md:bg-green-400 ls:bg-red-400">
+        <h1>my responshob</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore iure deserunt rem maxime ad laboriosam adipisci, at quisquam delectus id!</p>
+     </section>
+     <hr>
+     <section>
+        <h3>my flexible flex</h3>
+        <div class="h-80 overflow-scroll border border-2 border-purple-400 m-8 md:flex md:justufy-between sm:item-center">
+            <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 1</div>
+            <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 2</div>
+            <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 3</div>
+            <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 4</div>
+            <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 5</div>
+        </div>
+     </section>
+
+     <hr>
+     <section>
+        <h3 class="text-3xl">grid grid </h3>
+        <div class="grid grid-cols-4 ">
+          
+            <div class="bg-pink-300 border border-2 rounded-md">box 1</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 2</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 3</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 4</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 5</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 6</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 7</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 8</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 9</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 10</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 11</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 12</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 13</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 14</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 15</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 16</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 17</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 18</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 19</div>
+            <div class="bg-pink-300 border border-2 rounded-md">box 20</div>
+        </div>
+     </section>
     </main>
 
     <footer>
