--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      <hr>
      <section>
         <h3>my flexible flex</h3>
-        <div class="h-80 overflow-scroll border border-2 border-purple-400 m-8 md:flex md:justufy-between sm:item-center">
+        <div class="h-80 overflow-scroll border border-2 border-purple-400 m-8 md:flex md:justify-between md:items-center">
             <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 1</div>
             <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 2</div>
             <div class="w-24 h-24 border border-4 border-blue-400 rouuded-lg text-2xl font-bold">item 3</div>
@@ -63,13 +63,13 @@
      <hr>
      <section>
         <h3 class="text-3xl">grid grid </h3>
-        <div class="grid grid-cols-4 ">
+        <div class="grid md:grid-cols-4 gap-4 ">
           
             <div class="bg-pink-300 border border-2 rounded-md">box 1</div>
             <div class="bg-pink-300 border border-2 rounded-md">box 2</div>
             <div class="bg-pink-300 border border-2 rounded-md">box 3</div>
             <div class="bg-pink-300 border border-2 rounded-md">box 4</div>
-            <div class="bg-pink-300 border border-2 rounded-md">box 5</div>
+            <div class="bg-pink-300 border border-2 rounded-md md:col-span-3 ">box 5</div>
             <div class="bg-pink-300 border border-2 rounded-md">box 6</div>
             <div class="bg-pink-300 border border-2 rounded-md">box 7</div>
             <div class="bg-pink-300 border border-2 rounded-md">box 8</div>
